# dify-plugin-Bilibili-Search

./: .difyignore  PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
provider/: bilibili_search.py  bilibili_search.yaml
tools/: bilibili_get_video_info.py  bilibili_get_video_info.yaml  bilibili_search.py  bilibili_search.yaml  model.py  util.py
