[project]
name = "dify-plugin-bilibili-search"
version = "0.0.4"
description = "A Dify tool plugin for searching videos and retrieving video information on Bilibili"
authors = [
    { name = "jingfelix", email = "jingfelix@outlook.com" },
]
dependencies = [
    "dify-plugin>=0.9.0,<0.10.0",
    "httpx>=0.27.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.uv]
package = false
